Adding Design section

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@ callouts:
     alert:
         title: alert
         color: yellow
-
+    important:
+        title: important
+        color: red
 mermaid:
   version: "9.1.6"
