Trying to fix broken build issues

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: S&C Knowledge Base
 description: S&C Associates' Knowledge Base Articles
-theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs
 
 url: https://sandcassociates.github.io/knowledge-base/
 
